# web_hw6

./: additional_query_1.sql  additional_query_2.sql  connect.py  create_db.py  create_tables.sql  fill_data.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
