[tool.poetry]
name = "web-hw6"
version = "0.1.0"
description = ""
authors = ["m1hanch <misha5264@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^19.12.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
